GPII-669: Save button in PCP now shown straight under the panel, some names universalised for both pmt & pcp.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -1,4 +1,4 @@
-<div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
+<div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <a class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></a>
         <label for="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink"></label>
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="gpii-pcp-bottomRow">
+    <div class="gpii-prefsEditors-panelBottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
             <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
