--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
+<form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <a class="gpii-prefsEditor-link gpii-prefsEditor-quickEditorLink gpiic-prefsEditor-quickEditorLink"></a>
         <label for="pmtResetButton" class="gpii-prefsEditor-link gpii-prefsEditor-pmt-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
@@ -20,7 +20,7 @@
             <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></div>
         </div>
     </div>
-    <div class="gpii-pmt-bottomRow gpiic-pmt-bottomRow">
+    <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-pmt-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel">
