GPII-663: Reusable mockTest function moved into another file.

--- a/tests/html/gpiiStore-Test.html
+++ b/tests/html/gpiiStore-Test.html
@@ -12,6 +12,9 @@
         <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
+        <!-- Reusable test generation function: -->
+        <script src="../js/testGenerator.js"></script>
+
         <!-- GPIIStore specific files go here: -->
         <script src="../../src/shared/common/GpiiSession.js"></script>
         <script src="../../src/shared/common/GpiiStore.js"></script>
