--- a/tests/html/gpiiSession-Test.html
+++ b/tests/html/gpiiSession-Test.html
@@ -12,6 +12,9 @@
         <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
+        <!-- Reusable test generation function: -->
+        <script src="../js/testGenerator.js"></script>
+
         <!-- GPIISession specific files go here: -->
         <script src="../../src/shared/common/GpiiSession.js"></script>
         <!-- Test specific files go here: -->
