GPII-734, GPII-735: Using an event utility for preventDefault() cases. I don't use "javascript:void(0)" anymore in href attribute. Only "#". Also preventing default event in those cases so that URL doesn't get appended a "#".

--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -38,6 +38,7 @@
 
     <!-- The common JS files -->
     <script type="text/javascript" src="../../src/shared/common/ariaUtility.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/eventUtility.js"></script>
     <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
     <script type="text/javascript" src="../../src/shared/common/OSDetection.js"></script>
 
