--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -42,6 +42,7 @@
 
         <!-- The common JS files -->
         <script type="text/javascript" src="../../src/shared/common/ariaUtility.js"></script>
+        <script type="text/javascript" src="../../src/shared/common/eventUtility.js"></script>
         <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/activatableLabelsClickOnActivate.js"></script>
