--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,7 +1,7 @@
 <form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <a class="gpii-prefsEditor-link gpii-prefsEditor-quickEditorLink gpiic-prefsEditor-quickEditorLink"></a>
-        <a href="javascript:void(0)" class="gpii-prefsEditor-link gpii-prefsEditor-pmt-userLogoutLink gpiic-prefsEditor-userLogoutLink flc-prefsEditor-reset"></a>
+        <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-pmt-userLogoutLink gpiic-prefsEditor-userLogoutLink flc-prefsEditor-reset"></a>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
