GPII-742: Merge with Chris' GPII-743.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -1,7 +1,7 @@
 <div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
-        <a class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></a>
-        <label class="flc-prefsEditor-reset gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink"></label>
+        <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></a>
+        <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink flc-prefsEditor-reset"></a>
     </div>
 
     <div class="gpii-prefsEditor-preferencesContainer">
