--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -90,6 +90,7 @@
 
     <!-- PCPteam-specific files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
+    <script type="text/javascript" src="../../src/pcp/js/socket.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/pcp/js/visualAlternativesCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/volumeCollectivePanel.js"></script>
