GPII-716: Move prefsEditor.js into src/pcp.

--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -89,7 +89,7 @@
     <script type="text/javascript" src="../../src/shared/lib/socket.io/socket.io.js"></script>
 
     <!-- PCPteam-specific files -->
-    <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
+    <script type="text/javascript" src="../../src/pcp/js/prefsEditor.js"></script>
     <script type="text/javascript" src="../../src/pcp/js/socket.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/pcp/js/visualAlternativesCollectivePanel.js"></script>
