--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -73,6 +73,12 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollowsFollowingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/screenReaderFollowsFollowingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/addMobile.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/autoShutOffEnabled.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/shutOffTime.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/vibrationEnabled.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/orientationLockEnabled.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/orientationPosition.js"></script>
 
         <!-- The JS files of the enactors of my custom adjusters -->
         <script type="text/javascript" src="../../src/shared/enactors/js/contrastThemeNoPreview.js"></script>
