GPII-803: Indicator moved to the center of the font icon in screen orientation adjuster. Implement degrees below font icons. Define default value in shut Off time adjuster. Implementation about save and apply.

--- a/src/shared/adjusters/html/screenOrientationTemplate.html
+++ b/src/shared/adjusters/html/screenOrientationTemplate.html
@@ -2,11 +2,13 @@
 <div class="gpiic-increaseSize-orientationPositionContainer gpii-increaseSize-orientationPositionContainer" role="radiogroup" aria-labelledby="">
     <div class="gpiic-increaseSize-orientationPositionRow fl-choice gpii-prefsEditor-choice">
         <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-increaseSize-orientationPositionInput" name="orientationPosition" id="orientationPosition" />
-        <div class="fl-indicator gpii-prefsEditor-indicator"></div>
-        <label for="orientationPosition" class="gpii-increaseSize-orientationPositionLabel gpiic-increaseSize-orientationPositionLabel">
+        <div class="fl-indicator gpii-prefsEditor-orientationPositionIndicator"></div>
+        <!-- <label for="orientationPosition" class="gpii-increaseSize-orientationPositionLabel gpiic-increaseSize-orientationPositionLabel">-->
+        <label for="orientationPosition" class="gpiic-increaseSize-orientationPositionLabel">
             <span class="fl-preview-A"></span>
             <span class="fl-hidden-accessible"></span>
             <div class="fl-crossout"></div>
         </label>
+        <div class="gpiic-orientationPositionText gpii-orientationPositionText"></div>
     </div>
 </div>
