--- a/src/shared/adjusters/html/addMobileTemplate.html
+++ b/src/shared/adjusters/html/addMobileTemplate.html
@@ -3,7 +3,7 @@
 </div>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     <div class="gpiic-autoShutOffEnabled"></div>
-    <div class="gpiic-prefsEditor-textSize"></div>
+    <div class="gpiic-shutOffTime"></div>
 </div>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
 	<div class="gpii-prefsEditor-separator"></div>
