--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -30,7 +30,7 @@
         <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
             <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
             </label>
-            <input id="pcpSaveButton" class="gpiic-PCP-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply"></input>
+            <input id="pcpSaveButton" class="gpiic-PCP-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button"></input>
         </span>
     </div>
 </div>
