GPII-716: Rename apply button container.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -27,10 +27,10 @@
 
     <div class="gpii-prefsEditors-panelBottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
-        <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
-            <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
+        <span class="gpiic-applyButtonContainer gpii-applyButtonContainer">
+            <label for="pcpApplyButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
             </label>
-            <input id="pcpSaveButton" class="gpiic-apply gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button"></input>
+            <input id="pcpApplyButton" class="gpiic-apply gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button"></input>
         </span>
     </div>
 </div>
