GPII-716: Rename save to apply in listener names + css class.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -30,7 +30,7 @@
         <span class="gpiic-applyButtonContainer gpii-applyButtonContainer">
             <label for="pcpApplyButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
             </label>
-            <input id="pcpApplyButton" class="gpiic-apply gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button"></input>
+            <input id="pcpApplyButton" class="gpiic-apply gpii-PCP-apply fl-prefsEditor-save gpii-prefsEditor-save" type="button"></input>
         </span>
     </div>
 </div>
