GPII-736: Fixing minus and plus buttons for NVDA screen reader

--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -8,9 +8,11 @@
     </div>
 
     <div class="gpiic-textSize-stepper gpii-stepper">
-        <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-        <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+        <div class="gpiic-textfieldStepper-plusTextLabel gpii-hide-element"></div>
+        <div class="gpiic-textfieldStepper-minusTextLabel gpii-hide-element"></div>
+        <label tabindex="0" class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+        <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-        <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+        <label tabindex="0" class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
     </div>
 </div>
