--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -2,9 +2,11 @@
     <div class="gpiic-wordsSpokenPerMinute">
         <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
         <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-stepper">
-            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-            <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+	        <div class="gpiic-textfieldStepper-plusTextLabel gpii-hide-element"></div>
+    	    <div class="gpiic-textfieldStepper-minusTextLabel gpii-hide-element"></div>
+            <label tabindex="0" class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
+            <label tabindex="0" class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
 </div>
