GPII-752: Add status role to status message spans.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -23,7 +23,7 @@
                 </div>
             </form>
             <div class="gpii-prefsEditors-panelBottomRow">
-                <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
+                <span role="status" class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
                 <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
                     <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
                     </label>
