GPII-736: Delete tabindex attribute from plus and minus labels.

--- a/src/shared/adjusters/html/magnifierTemplatePMT.html
+++ b/src/shared/adjusters/html/magnifierTemplatePMT.html
@@ -7,9 +7,9 @@
     </div>
 
     <div class="gpiic-magnifier-stepper gpii-stepper">
-        <label tabindex="0" class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+        <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
         <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-        <label tabindex="0" class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+        <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
     </div>
 </div>
