--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -3,9 +3,9 @@
         <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
         <div class="gpiic-universalVolume-description gpii-description"></div>
         <div class="gpiic-speakText-universalVolume-stepper gpii-stepper">
-            <label tabindex="0" class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <label tabindex="0" class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
 </div>
