--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -2,9 +2,9 @@
     <div class="gpiic-voicePitch">
         <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
         <div class="gpiic-speakText-voicePitch-stepper gpii-stepper">
-            <label tabindex="0" class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <label tabindex="0" class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
 </div>
