GPII-736: Removing duplication for plus and minus labels. Code migration about plusText and minusText to gpii.adjuster.textfieldStepper. Removing tabindex from textfields.

--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -4,7 +4,7 @@
         <div class="gpiic-universalVolume-description gpii-description"></div>
         <div class="gpiic-speakText-universalVolume-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-            <input tabindex="0" type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
+            <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
             <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
