GPII-738: Fixing problems in headings. The user of NVDA and JAWS can navigate through headings.

--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,5 +1,5 @@
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
+    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle"><label class="gpii-prefsEditor-headerClickableLabel"></label></h1>
 </div>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     <div class="gpiic-contrastEnabled"></div>
