--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -1,4 +1,4 @@
-<h4 class="gpiic-increaseSize-cursor-size-label"></h4>
+<h3 class="gpiic-increaseSize-cursor-size-label gpii-increaseSize-label"></h3>
 
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
