--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="gpiic-speakText-readBack-label gpii-label"></div>
+    <h3><div class="gpiic-speakText-readBack-label gpii-label"></div></h3>
     <div>
         <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
         <label for="key-echo" class="gpiic-keyEcho-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
