--- a/src/shared/adjusters/html/magnifierTemplatePMT.html
+++ b/src/shared/adjusters/html/magnifierTemplatePMT.html
@@ -1,5 +1,5 @@
 <div>
-    <h4 class="gpiic-magnifier-magnificationLevel"></h4>
+    <h3 class="gpiic-magnifier-magnificationLevel gpii-increaseSize-label"></h3>
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
