--- a/src/shared/adjusters/html/screenReaderLanguageTemplate.html
+++ b/src/shared/adjusters/html/screenReaderLanguageTemplate.html
@@ -1,4 +1,4 @@
 <div class="gpii-dropdown">
-    <label class="gpiic-screenReaderLanguage-label gpii-label"></label><br>
+    <h3><label class="gpiic-screenReaderLanguage-label gpii-label"></label></h3>
     <select class="gpiic-screenReaderLanguage gpii-dropdownSelect"></select>
 </div>
