--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -1,5 +1,5 @@
 <div class="gpii-prefsEditor-adjusterPanel">
-    <h4 class="gpiic-textSize-label"></h4>
+    <h3 class="gpiic-textSize-label gpii-increaseSize-label"></h3>
 
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
