--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
 <div class="gpii-dropdown">
-    <label class="gpiic-universalLanguage-label gpii-label"></label><br>
+    <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-universalLanguage-label"></label></h2>
     <select class="gpiic-universalLanguage gpii-dropdownSelect"></select>
 </div>
