--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,6 +1,6 @@
 <div>
     <div class="gpiic-voicePitch">
-        <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
+        <h3><label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label></h3>
         <div class="gpiic-speakText-voicePitch-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
