--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -1,6 +1,6 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
-        <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label>
+        <h1><label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label></h1>
         <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div>
 
