--- a/src/shared/adjusters/html/VolumeGroupContainer.html
+++ b/src/shared/adjusters/html/VolumeGroupContainer.html
@@ -1,6 +1,6 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
-        <label for="volumePresetButton" class="gpii-volumePresetButton-label gpii-preset-button-label"></label>
+        <h1><label for="volumePresetButton" class="gpii-volumePresetButton-label gpii-preset-button-label"></label></h1>
         <label for="volumePresetButton" class="volume-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div><br>
 
