--- a/src/shared/adjusters/html/followingElementTemplate.html
+++ b/src/shared/adjusters/html/followingElementTemplate.html
@@ -1,5 +1,7 @@
 <div class="gpii-followingElement-container">
-    <h3 class="gpiic-followingElementHeading gpii-label"></h3>
+	<section>
+    	<h3 class="gpiic-followingElementHeading gpii-label"></h3>
+    </section>
     <div class="gpii-followingElementRow gpiic-followingElementRow">
     	<input type="checkbox" class="gpiic-followingElementInput" id="followingElement" name="followingElement"/>
     	<label for="followingElement" class="gpii-iconCheckAdjusterArea gpiic-followingElementLabel" tabindex="0" role="checkbox" aria-checked="" aria-describedby=""></label>
