--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -1,12 +1,18 @@
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle"><label class="gpii-prefsEditor-headerClickableLabel"></label></h1>
+	<section class="gpii-prefsEditor-headerTitle">
+    	<h1 class="gpiic-headerTitle gpii-prefsEditor-headerTitleIncreaseSize">
+    		<!-- <label class="gpii-prefsEditor-headerClickableLabel"></label> -->
+    	</h1>
+    </section>
 </div>
 <div class="gpii-increaseSizePreferenceGroup">
 
     <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        <h2 class="gpii-prefsEditor-firstHeading">
-            <label class="gpiic-increaseSize-appearanceHeading"></label>
-        </h2>
+    	<section>
+	        <h2 class="gpii-prefsEditor-firstHeading">
+	            <label class="gpiic-increaseSize-appearanceHeading"></label>
+	        </h2>
+		</section>
     </div>
 
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
