--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,5 +1,7 @@
 <div>
-    <h3><div class="gpiic-speakText-announce-label gpii-label"></div></h3>
+	<section>
+    	<h3><div class="gpiic-speakText-announce-label gpii-label"></div></h3>
+    </section>
     <div>
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
         <div class="gpiic-punctuationVerbosity-container gpii-punctuationVerbosity-container" role="radiogroup" aria-labelledby="" aria-describedby="">
