--- a/src/shared/adjusters/html/textHighlightingTemplate.html
+++ b/src/shared/adjusters/html/textHighlightingTemplate.html
@@ -1,4 +1,6 @@
 <div class="gpii-dropdown">
-    <h3><label class="gpiic-textHighlighting-label gpii-label"></label></h3>
+	<section>
+    	<h3><label class="gpiic-textHighlighting-label gpii-label"></label></h3>
+    </section>
     <select class="gpiic-textHighlighting gpii-dropdownSelect"></select>
 </div>
