--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,6 @@
 <div class="gpii-dropdown">
-    <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-universalLanguage-label"></label></h2>
+	<section>
+    	<h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-universalLanguage-label"></label></h2>
+    </section>
     <select class="gpiic-universalLanguage gpii-dropdownSelect"></select>
 </div>
