--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,6 +1,8 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
-        <h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
+        <section>
+        	<h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
+        </section>
         <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div><br>
 
