--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -1,5 +1,6 @@
-<h3 class="gpiic-increaseSize-cursor-size-label gpii-increaseSize-label"></h3>
-
+<section>
+	<h3 class="gpiic-increaseSize-cursor-size-label gpii-increaseSize-label"></h3>
+</section>
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
