--- a/src/shared/adjusters/html/iconCheckTemplateShowCrosshairs.html
+++ b/src/shared/adjusters/html/iconCheckTemplateShowCrosshairs.html
@@ -1,5 +1,7 @@
 <div class="gpii-iconCheck-adjuster">
-    <h3 class="gpiic-iconCheckAdjusterTitle gpii-increaseSize-label"></h3>
+	<section>
+    	<h3 class="gpiic-iconCheckAdjusterTitle gpii-increaseSize-label"></h3>
+    </section>
     <input type="checkbox" id="preferenceSwitchIconCheckAdjusterShowCrosshairs"/>
     <label for="preferenceSwitchIconCheckAdjusterShowCrosshairs" class="gpiic-showCrosshairs-iconCheckAdjusterArea gpii-iconCheckAdjusterArea" tabindex="0" role="checkbox" aria-checked="" aria-describedby="">
     	<div class="gpiic-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
