--- a/src/shared/adjusters/html/magnifierPositionTemplate.html
+++ b/src/shared/adjusters/html/magnifierPositionTemplate.html
@@ -1,4 +1,6 @@
-<h3 class="gpiic-increaseSize-magnifierPositionHeading gpii-increaseSize-label"></h3>
+<section>
+	<h3 class="gpiic-increaseSize-magnifierPositionHeading gpii-increaseSize-label"></h3>
+</section>
 <div class="gpiic-increaseSize-magnifierPositionContainer gpii-increaseSize-magnifierPositionContainer" role="radiogroup" aria-labelledby="">
     <div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-prefsEditor-choice">
         <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
