--- a/src/shared/adjusters/html/magnifierTemplatePMT.html
+++ b/src/shared/adjusters/html/magnifierTemplatePMT.html
@@ -1,5 +1,7 @@
 <div>
-    <h3 class="gpiic-magnifier-magnificationLevel gpii-increaseSize-label"></h3>
+	<section>
+    	<h3 class="gpiic-magnifier-magnificationLevel gpii-increaseSize-label"></h3>
+    </section>
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
