--- a/src/shared/adjusters/html/onOffSwitchTemplate.html
+++ b/src/shared/adjusters/html/onOffSwitchTemplate.html
@@ -1,7 +1,9 @@
 <div class="gpii-onOffSwitch-container" role="presentation">
-    <h2 class="gpii-prefsEditor-firstHeading ">
-        <label class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label>
-    </h2>
+    <section>
+    	<h2 class="gpii-prefsEditor-firstHeading ">
+        	<label class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label>
+    	</h2>
+    </section>
     <div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="onOffSwitchInput" class="gpiic-onOffSwitch-input"/>
         <label for="onOffSwitchInput">
