--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -1,6 +1,7 @@
 <div class="gpii-prefsEditor-adjusterPanel">
-    <h3 class="gpiic-textSize-label gpii-increaseSize-label"></h3>
-
+	<section>
+    	<h3 class="gpiic-textSize-label gpii-increaseSize-label"></h3>
+	</section>
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
