--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -1,6 +1,8 @@
 <div class="gpii-prefsEditor-category">
     <div class="gpiic-universalVolume">
-        <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label></h2>
+    	<section>
+        	<h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label></h2>
+        </section>
         <div class="gpiic-universalVolume-description gpii-description"></div>
         <div class="gpiic-speakText-universalVolume-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
