--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -1,6 +1,8 @@
 <div>
     <div class="gpiic-wordsSpokenPerMinute">
-        <h3><label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label></h3>
+    	<section>
+        	<h3><label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label></h3>
+        </section>
         <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
