GPII-722: Fixing problem with blank sentences. NVDA reads a lot of blank sentences that confuse the user.

--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,8 +1,8 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
         <label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label>
-        <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label><br>
-        <div class="gpii-spacingEnsurer"></div><br>
+        <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label>
+        <div class="gpii-spacingEnsurer-big"></div>
 
         <div class="universalLanguage gpii-prefsEditor-category"></div>
     </div>
