--- a/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
@@ -9,6 +9,6 @@
             <span class="fl-hidden-accessible"></span>
             <div class="fl-crossout"></div>
         </label>
-        <span class="fl-indicator gpii-contrastThemeIndicator"></span>
+        <span class="fl-indicator gpii-contrastThemeIndicator" aria-hidden="true"></span>
     </div>
 </div>
