--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
         <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label>
-        <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
+        <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label>
         <div class="gpii-spacingEnsurer"></div>
 
         <div class="gpii-prefsEditor-category">
