--- a/src/shared/adjusters/html/VolumeGroupContainer.html
+++ b/src/shared/adjusters/html/VolumeGroupContainer.html
@@ -1,8 +1,8 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
         <label for="volumePresetButton" class="gpii-volumePresetButton-label gpii-preset-button-label"></label>
-        <label for="volumePresetButton" class="volume-header-icon gpii-header-icon"></label><br>
-        <div class="gpii-spacingEnsurer"></div><br>
+        <label for="volumePresetButton" class="volume-header-icon gpii-header-icon"></label>
+        <div class="gpii-spacingEnsurer-big"></div>
 
         <div class="universalVolume"></div>
     </div>
