GPII-738: Insertion of section tag. There is one section for each composite panel.

--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,11 +1,9 @@
 <div class="flc-prefsEditor-controls">
-    <div class="fl-prefsEditor-category">
-        <section>
-        	<h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
-        </section>
+    <section class="fl-prefsEditor-category">
+        <h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
         <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div><br>
 
         <div class="universalLanguage gpii-prefsEditor-category"></div>
-    </div>
+    </section>
 </div>
