--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -16,8 +16,8 @@
             <div class="gpiic-visualAlternatives gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-volumeGroup gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-languageGroup gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></div>
+            <section class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></section>
+            <section class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></section>
         </div>
     </div>
     <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
