--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -1,8 +1,6 @@
 <div class="flc-prefsEditor-controls">
-    <div class="fl-prefsEditor-category">
-    	<section>
-        	<h1><label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label></h1>
-        </section>
+    <section class="fl-prefsEditor-category">
+        <h1><label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label></h1>
         <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div>
 
@@ -26,5 +24,5 @@
             <div class="visualAlternativesMoreLess"></div>
             <div class="braille"></div><br>
         </div>
-    </div>
+    </section>
 </div>
