--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,8 +1,5 @@
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-	<section class="gpii-prefsEditor-headerTitle">
-		<h1 class="gpiic-headerTitle gpii-prefsEditor-headerTitleContrast">
-		</h1>
-	</section>    		
+    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle"><label class="gpii-prefsEditor-headerClickableLabel"></label></h1>
 </div>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     <div class="gpiic-contrastEnabled"></div>
