GPII-878: Fixing headings "h1" for visual alternatives, volume and language.

--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -1,5 +1,5 @@
 <div class="flc-prefsEditor-controls">
-    <section class="fl-prefsEditor-category">
+    <section class="fl-prefsEditor-category gpiic-visualAlternatives-section">
         <h1><label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label></h1>
         <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label>
         <div class="gpii-spacingEnsurer"></div>
