--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,5 +1,5 @@
 <div class="flc-prefsEditor-controls">
-    <section class="fl-prefsEditor-category">
+    <section class="fl-prefsEditor-category gpiic-language-section">
         <h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
         <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label>
         <div class="gpii-spacingEnsurer-big"></div>
