--- a/src/shared/adjusters/html/VolumeGroupContainer.html
+++ b/src/shared/adjusters/html/VolumeGroupContainer.html
@@ -1,5 +1,5 @@
 <div class="flc-prefsEditor-controls">
-    <section class="fl-prefsEditor-category">
+    <section class="fl-prefsEditor-category gpiic-volume-section">
         <h1><label for="volumePresetButton" class="gpii-volumePresetButton-label gpii-preset-button-label"></label></h1>
         <label for="volumePresetButton" class="volume-header-icon gpii-header-icon"></label>
         <div class="gpii-spacingEnsurer-big"></div>
