--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,7 +1,9 @@
-<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle"><label class="gpii-prefsEditor-headerClickableLabel"></label></h1>
-</div>
-<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-    <div class="gpiic-contrastEnabled"></div>
-    <div class="gpiic-contrastTheme"></div>
-</div>
+<section class="gpiic-contrast-section gpii-prefsEditor-contrastPanel">
+	<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
+	    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle"></h1>
+	</div>
+	<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+	    <div class="gpiic-contrastEnabled"></div>
+	    <div class="gpiic-contrastTheme"></div>
+	</div>
+</section>
