GPII-878: Fixing heading one and two of language and volume panels. Fixing heading one of contrast and increase size panels.

--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-controls">
     <section class="fl-prefsEditor-category gpiic-language-section">
         <h1><label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label></h1>
-        <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label>
+        <label for="languagePresetButton" class="language-header-icon gpii-header-icon" aria-hidden="true"></label>
         <div class="gpii-spacingEnsurer-big"></div>
 
         <div class="universalLanguage gpii-prefsEditor-category"></div>
