--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -1,6 +1,7 @@
-<section class="gpiic-increaseSize-section gpii-prefsEditor-increaseSizePanel">
-	<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-	    <h1 class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></h1>
+<section class="gpiic-increaseSize-section">
+	<div>
+		<label class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></label>
+	    <h1 class="gpii-prefsEditor-headerTitle-withoutIcon gpiic-headerTitle"></h1>
 	</div>
 	<div class="gpii-increaseSizePreferenceGroup">
 	
