--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -2,8 +2,8 @@
     <h3 class="gpiic-textSize-label gpii-increaseSize-label"></h3>
 
     <div class="gpii-prefsEditor-previewPerSettingContainer">
-        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
-        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye" aria-hidden="true"></div>
+        <div class="gpii-prefsEditor-previewPerSettingEyeBackground" aria-hidden="true"></div>
         <iframe tabindex="-1" class="gpiic-textSize-preview gpiic-adjuster-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
     </div>
 
