GPII-878: Fixing heading one label and icon label. Tranform labels to spans.

--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-controls">
     <section class="fl-prefsEditor-category gpiic-visualAlternatives-section">
-        <h1><label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label></h1>
-        <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label>
+        <h1><span class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></span></h1>
+        <span class="visualAlternatives-header-icon gpii-header-icon"></span>
         <div class="gpii-spacingEnsurer"></div>
 
         <div class="gpii-prefsEditor-category">
