--- a/src/shared/adjusters/html/VolumeGroupContainer.html
+++ b/src/shared/adjusters/html/VolumeGroupContainer.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-controls">
     <section class="fl-prefsEditor-category gpiic-volume-section">
-        <h1><label for="volumePresetButton" class="gpii-volumePresetButton-label gpii-preset-button-label"></label></h1>
-        <label for="volumePresetButton" class="volume-header-icon gpii-header-icon" aria-hidden="true"></label>
+        <h1><span class="gpii-volumePresetButton-label gpii-preset-button-label"></span></h1>
+        <span class="volume-header-icon gpii-header-icon" aria-hidden="true"></span>
         <div class="gpii-spacingEnsurer-big"></div>
 
         <div class="universalVolume"></div>
