--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -1,6 +1,6 @@
 <section class="gpiic-increaseSize-section">
 	<div>
-		<label class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></label>
+		<span class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></span>
 	    <h1 class="gpii-prefsEditor-headerTitle-withoutIcon gpiic-headerTitle"></h1>
 	</div>
 	<div class="gpii-increaseSizePreferenceGroup">
