--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -1,8 +1,8 @@
 <h3 class="gpiic-increaseSize-cursor-size-label gpii-increaseSize-label"></h3>
 
-<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
-    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye" aria-hidden="true"></div>
-    <div class="gpii-prefsEditor-previewPerSettingEyeBackground" aria-hidden="true"></div>
+<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer" aria-hidden="true">
+    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+    <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
     <iframe tabindex="-1" class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
 </div>
 
