GPII-752: Remove unwanted <br> tags.

--- a/src/pcp/html/pcp-VisualAlternativesGroupContainer.html
+++ b/src/pcp/html/pcp-VisualAlternativesGroupContainer.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-controls">
     <div class="fl-prefsEditor-category">
         <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label>
-        <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
+        <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label>
         <div class="gpii-spacingEnsurer"></div>
 
         <div class="speakText"></div>
@@ -15,6 +15,6 @@
         <div class="keyEcho"></div>
         <div class="wordEcho"></div>
         <div class="textHighlighting"></div>
-        <div class="braille"></div><br>
+        <div class="braille"></div>
     </div>
 </div>
