--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -22,7 +22,7 @@
                 <div class="screanReaderFollows"></div>
             </div>
             <div class="visualAlternativesMoreLess"></div>
-            <div class="braille"></div><br>
+            <div class="braille"></div>
         </div>
     </section>
 </div>
