--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -5,6 +5,6 @@
         <label for="key-echo" class="gpiic-keyEcho-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
         	<span class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></span>
         	<span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span>
-        </label><br>
+        </label>
     </div>
 </div>
