--- a/src/shared/adjusters/html/visualAlternativesTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesTemplate.html
@@ -14,7 +14,7 @@
     <div class="gpiic-speakText-language"></div>
     <div class="gpiic-speakText-punctuation"></div>
     <div class="gpiic-speakText-capitals"></div>
-    <div class="gpiic-speakText-tutorialMessages"></div><br>
+    <div class="gpiic-speakText-tutorialMessages"></div>
     <div class="gpiic-speakText-readBack-keyEcho"></div>
     <div class="gpiic-speakText-readBack-wordEcho"></div>
     <div class="gpiic-speakText-braille"></div>
