--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -7,5 +7,5 @@
             <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
             <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
-    </div><br>
+    </div>
 </div>
