GPII-752: Add status role to messageLine element in PMT.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -19,7 +19,7 @@
             <section class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></section>
             <section class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></section>
             <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
-                <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
+                <span role="status" class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
                 <span class="gpii-pmt-saveButtonContainer">
                     <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel">
                     </label>
