GPII-878: Removing region role from magnifier adjuster.

--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -23,12 +23,12 @@
         <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
             <div class="gpiic-prefsEditor-magnifierEnabled"></div>
 	
-            <div class="gpiic-prefsEditor-magnifier-container" role="region" aria-live="polite" aria-atomic="true" aria-relevant="">
+            <div class="gpiic-prefsEditor-magnifier-container" aria-live="polite" aria-atomic="true" aria-relevant="">
                 <div class="gpiic-prefsEditor-magnifier">
                 </div>
             </div>
 	
-            <div id="gpiic-magnifier-hiddenPanel" aria-expanded="" aria-label="" role="region" class="gpiic-magnifier-hidden">
+            <div id="gpiic-magnifier-hiddenPanel" aria-expanded="" aria-label="" class="gpiic-magnifier-hidden">
                 <div class="gpiic-prefsEditor-magnifierPosition"></div>
                 <div class="gpiic-prefsEditor-magnifierFollows"></div>
                 <div class="gpiic-prefsEditor-showCrosshairs"></div>
