GPII-878: Removing region role from speak text adjuster.

--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -6,11 +6,11 @@
 
         <div class="gpii-prefsEditor-category">
             <div class="speakText"></div>
-            <div class="gpiic-speakText-container" role="region" aria-live="polite" aria-atomic="true" aria-relevant="">
+            <div class="gpiic-speakText-container" aria-live="polite" aria-atomic="true" aria-relevant="">
                 <div class="words-spoken-per-minute"></div>
                 <div class="volume"></div>
             </div>
-            <div id="gpiic-visualAlternatives-hiddenPanel" class="gpiic-visualAlternatives-hiddenPanel" aria-expanded="" aria-label="" role="region">
+            <div id="gpiic-visualAlternatives-hiddenPanel" class="gpiic-visualAlternatives-hiddenPanel" aria-expanded="" aria-label="">
                 <div class="voicePitch"></div>
                 <div class="screenReaderLanguage"></div>
                 <div class="punctuationVerbosity"></div>
