GPII-952: Make status message a dialog.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -21,12 +21,17 @@
                 </div>
             </form>
             <div class="gpii-prefsEditors-panelBottomRow">
-                <span role="status" class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
                 <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
                     <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
                     </label>
                     <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply"></input>
                 </span>
+                <div class="gpiic-pcp-statusMessage gpii-pcp-statusMessage">
+                    <span role="status" class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
+                    <div class="gpii-prefsEditor-notificationConfirmationArea">
+                        <div class="gpii-prefsEditor-notificationConfirmButton gpiic-pcp-messageButton"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
